--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,11 @@
+<ngx-spinner>
+    <h3>Loading....</h3>
+</ngx-spinner>
+
 <app-nav-bar></app-nav-bar>
-<div class="container" style="margin-top: 14px;">
-    <app-shop></app-shop>
+<app-section-header></app-section-header>
+
+<div>
+    <router-outlet></router-outlet>
 </div>
 
