--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -1,9 +1,9 @@
 <div  class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 justify-content-between bg-white border-bottom shadow-sm">
-  <img src="/assets/images/logo.png" style="max-height: 60px" alt="logo" />
+  <img src="/assets/images/logo.png" style="max-height: 60px" alt="logo" routerLink="/" class="logo"/>
   <nav class="my-2 my-md-0 mr-md-3 text-uppercase">
-    <a class="p-2 text-dark" href="#">Home</a>
-    <a class="p-2 text-dark" href="#">Shop</a>
-    <a class="p-2 text-dark" href="#">Contact</a>
+    <a class="p-2" [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Home</a>
+    <a class="p-2" routerLink="/shop" routerLinkActive="active" >Shop</a>
+    <a class="p-2"[routerLink]="['/test-error']" routerLinkActive="active" >Error</a>
   </nav>
   <div class="d-flix align-items-center">
     <a class="position-relative">
