--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -1,7 +1,9 @@
-<div class="container">
+<div class="container mt-2">
     <div class="row">
         <section class="col-3">
-            <h5 class="text-warning ml-3" >Sort</h5>
+            <ng-container *ngIf="producttypes && brands">
+            
+            <h5 class="text-warning mt-4 mb-3" >Sort</h5>
             <select class="custom-select mb-3" (change)="onSortSelected($event.target.value)">
                 <option 
                 *ngFor="let sort of sortOptions"
@@ -32,15 +34,16 @@
                     (click)="onTypeSelected(producttype.id)"
                     >{{producttype.name}}</li>
                   </ul>
+                </ng-container>
         </section>
         <section class="col-9">
-            <div class="d-flex justify-content-between align-items-center pb-2">
+            <div class="d-flex justify-content-between align-items-center">
             
                 <app-paging-header [totalCount]="totalCount"
                     [pageSize]="this.shopParams.pageSize"
                     [pageNumber]="this.shopParams.pageNumber">
                 </app-paging-header>
-                <div class="form-inline mt-2">
+                <div class="form-inline mt-2" *ngIf="products">
                     <input (keyup.enter)="onSearch()" class="form-control mr-2" type="text" #search placeholder="Search" style="width:300px">
                     <button class="btn btn-outline-primary my-2" (click)="onSearch()">Search</button>
                     <button class="btn btn-outline-success ml-2" (click)="onReset()">Reset</button>
