--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -6,9 +6,9 @@
     <a class="p-2"[routerLink]="['/test-error']" routerLinkActive="active" >Error</a>
   </nav>
   <div class="d-flix align-items-center">
-    <a class="position-relative">
-        <i class="fa fa-shopping-cart fa-2x mr-5 text-dark"></i>
-        <div class="cart-no" style="background-color:#e6ce7a; color:black">5</div>
+    <a class="position-relative" style="cursor:grabbing"> 
+        <i routerLink="/basket" class="fa fa-shopping-cart fa-2x mr-5 text-dark"></i>
+        <div *ngIf="(basket$|async) as basket" class="cart-no" style="background-color:#e6ce7a; color:black">{{basket.items.length}}</div>
     </a>
     <a class="btn btn-outline-secondary mr-2" href="#">Login</a>
     <a class="btn btn-outline-secondary mr-3" href="#">Sign up</a>
