--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 
 
-<carousel>
+<carousel [isAnimated]="true">
     <slide>
         <img class="img-fluid" src="assets/images/Roadster.jpg" alt="first slide" style="display:block; width:100%">
     </slide>
