--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,4 @@
-<ngx-spinner>
+<ngx-spinner type = "ball-zig-zag-deflect"  size = "medium">
     <h3>Loading....</h3>
 </ngx-spinner>
 <app-nav-bar></app-nav-bar>
