--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -8,9 +8,30 @@
   <div class="d-flix align-items-center">
     <a class="position-relative" style="cursor:grabbing"> 
         <i routerLink="/basket" class="fa fa-shopping-cart fa-2x mr-5 text-dark"></i>
-        <div *ngIf="(basket$|async) as basket" class="cart-no" style="background-color:#e6ce7a; color:black">{{basket.items.length}}</div>
+        <div *ngIf="(basket$|async)" class="cart-no" style="background-color:#e6ce7a; color:black">{{(basket$|async).items.length}}</div>
     </a>
-    <a class="btn btn-outline-secondary mr-2" href="#">Login</a>
-    <a class="btn btn-outline-secondary mr-3" href="#">Sign up</a>
+    <ng-container *ngIf="(currentUser$|async)===null">
+      <a class="btn btn-outline-secondary mr-2" routerLink="/account/login">Login</a>
+      <a class="btn btn-outline-secondary mr-3" routerLink="/account/register">Sign up</a>
+    </ng-container>
+    <ng-container *ngIf="(currentUser$ |async)">
+      <div class="dropdown ml-3 mr-5" dropdown>
+        <a  class="dropdown-toggle" dropdownToggle>
+          <strong>Welcome</strong> {{(currentUser$|async).displayName}}
+        </a>
+        <div class="dropdown-menu dropdown-menu-right" *dropdownMenu>
+            <a  routerLink="/basket" class="dropdown-item d-flex align-items-center py-2"> 
+            <i class="fa fa-shopping-cart mr-3"></i>  View Basket</a>
+
+            <a routerLink="/order"  class="dropdown-item d-flex align-items-center py-2"> 
+              <i class="fa fa-history mr-3"></i>  View Order</a>
+              <div class="dropdown-divider"></div>
+              <a  (click)="logout()" class="dropdown-item d-flex align-items-center py-2"> 
+                <i class="fa fa-sign-out mr-3"></i>  logout</a>
+        </div>
+      </div>
+        
+    </ng-container>
+    
   </div>
 </div>
